<resources>
    <string name="app_name">Honda Sales Force</string>
    <string name="default_notification_channel_id" translatable="false">HSF</string>
    <string name="login">Login</string>
    <string name="logindes">Masukan akun dan password anda</string>
    <string name="loginhint">Ketik honda ID (6 karakter)</string>
    <string name="passwordhint">Ketik Password</string>
    <string name="masuk">Masuk ></string>
    <string name="donthaveaccount">Belum Punya Akun?</string>
    <string name="forgotpassword">Lupa Password</string>
    <string name="register">Daftar</string>
    <string name="registerdesc">Silahkan isi data data berikut ini</string>
    <string name="name">Nama</string>
    <string name="hid">Honda ID</string>
    <string name="jabatan">Jabatan</string>
    <string name="email">E-Mail</string>
    <string name="phone">Nomor Handphone</string>
    <string name="password">Password</string>
    <string name="passwordconf">Konfirmasi Password</string>
    <string name="submit">Kirim</string>
    <string name="passwordnotes">*Password merupakan kombinasi dari huruf dan angka</string>
    <string name="backtologin">Kembali ke Login</string>
    <string name="forgotpassworddesc">Masukan Email anda, kami akan mengirimkan tautan untuk mereset password ke email
        anda
    </string>
    <string name="otpverification">Verifikasi OTP</string>
    <string name="otpverificationdesc">Masukan kode OTP yang anda terima di ponsel anda</string>
    <string name="changepassword">Ganti Password</string>
    <string name="changepassworddesc">Silahkan masukan password baru anda</string>
    <string name="hidnull">Honda ID tidak boleh kosong</string>
    <string name="passnull">Password Tidak Boleh Kosong</string>
    <string name="namenull">Nama Tidak Boleh Kosong</string>
    <string name="emailnull">Email TidakBoleh Kosong</string>
    <string name="phonenull">No.Telepon TidakBoleh Kosong</string>
    <string name="jabatannull">Jabatan Harus Dipilih</string>
    <string name="registersuccess">Registrasi Berhasil!</string>
    <string name="registersuccessdesc">Anda telah berhasil mendaftar. Silahkan kembali ke halaman Login untuk masuk ke
        aplikasi
    </string>
    <string name="passwordnotequal">Password tidak sama dengan konfirmasi password</string>
    <string name="bento">Bento Surento</string>
    <string name="mypoint">Poin Saya</string>
    <string name="productknowledge">Pengetahuan Produk</string>
    <string name="mFrequent">Monitoring Frequent User FLP</string>
    <string name="mPartisipant">Monitoring Partisipant Kuis</string>
    <string name="mQualified">Monitoring Qualified Sales People</string>
    <string name="mQuiz">Monitoring Nilai Kuis</string>

    <string name="mTFrequent">Frequent User FLP</string>
    <string name="mTPartisipant">Partisipant Kuis</string>
    <string name="mTQualified">Qualified Sales People</string>
    <string name="mTQuiz">Nilai Kuis</string>

    <string name="basicknowledge">Pengetahuan Umum</string>
    <string name="video">Video</string>
    <string name="openapps">Membuka Apps</string>
    <string name="readsalestalk">Membaca Sales Talk</string>
    <string name="watchvideo">Menonton Video</string>
    <string name="entrydata">Memasukan Data</string>
    <string name="takeassesment">Mengambil Assessment</string>
    <string name="pass">Lulus</string>
    <string name="her">Mengulang</string>
    <string name="prospect">Prospect Collections</string>
    <string name="apparel">Apparel</string>
    <string name="article">Artikel</string>
    <string name="noarticle">No Article Found</string>
    <string name="harga">Harga</string>
    <string name="ukuran">Ukuran</string>
    <string name="material">Material</string>
    <string name="warna">Warna</string>
    <string name="filter">Filter</string>
    <string name="cari">Cari..</string>
    <string name="acessories">Accessories</string>
    <string name="customizingparts">Customizing Parts</string>
    <string name="brand">Brand</string>
    <string name="daftarkomunitashonda">Daftar Komunitas Honda</string>
    <string name="daftarbengkelmodifikasi">Daftar Bengkel Modifikasi</string>
    <string name="servicetalk">Service Talk</string>
    <string name="community">Community</string>
    <string name="bengkelmodifikasi">Bengkel Modifikasi</string>
    <string name="bisadiambildari">Bisa Diambil Dari</string>
    <string name="ambilkuis">Ambil Kuis</string>
    <string name="isisurvey">Isi Survey</string>
    <string name="bisadiisidari">Bisa Diisi Dari</string>
    <string name="timeleft">Waktu Tersisa</string>
    <string name="minute">Menit</string>
    <string name="second">Detik</string>
    <string name="numquest">Jumlah Soal</string>
    <string name="done">Selesai</string>
    <string name="total">Dari Total</string>
    <string name="next">Selanjutnya</string>
    <string name="baru">New</string>
    <string name="thanksquiz">Terimakasih telah mengikuti Kuis ini, Nilai yang anda peroleh adalah</string>
    <string name="niceresult">Hasil anda sudah bagus, Silahkan kembali ke halaman awal</string>
    <string name="backtohome"><![CDATA[Kembali ke Home >]]></string>
    <string name="thankssurvey">Terima kasih sudah mengikuti survey ini, Silahkan kembali ke halaman awal</string>
    <string name="ridingcomfort">Riding Comfort</string>
    <string name="color">Warna</string>
    <string name="clear">Bersihkan</string>
    <string name="save">Simpan</string>
    <string name="close">Tutup</string>
    <string name="basicknowledgewarn">Penjelasan ini harus diinformasikan ke customer AHASS</string>
    <string name="inputbdc">Pengumpulan CDB</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan Barcode</string>
    <string name="numsurv">Jumlah Survey</string>
    <string name="readproduct">Membaca Pengetahuan Produk</string>
    <string name="readknowledge">Membaca Pengetahuan Umum</string>
    <string name="readarticle">Membaca Artikel</string>
    <string name="collectcdb">Pengumpulan CDB</string>
    <string name="takequis">Mengambil Kuis</string>
    <string name="takesurvey">Mengisi Survey</string>
    <string name="redeem">Redeem</string>
    <string name="point">Poin</string>
    <string name="inputspvcode">Masukan kode Supervisor anda</string>
    <string name="redeempoint">Redeem Poin</string>
    <string name="quisno">Soal Ke</string>
    <string name="surveyno">Survey Ke</string>
    <string name="cdbresult">Anda telah berhasil meambahkan Prospect. Silahkan kembali ke halaman awal</string>
    <string name="updatecdbsuccess">Update Status Berhasil!</string>
    <string name="update">Update</string>
    <string name="hidvalid">Honda ID Ditemukan</string>
    <string name="hidinvalid">Honda ID Tidak Ditemukan</string>
    <string name="emailvalid">Email Sesuai</string>
    <string name="emailinvalid">Email tidak terdaftar</string>
    <string name="hidalreadyregistered">Honda Id sudah pernah di daftarkan</string>
    <string name="emailalreadyregistered">Email sudah pernah didaftarkan</string>
    <string name="markread">Tandai sudah dibaca</string>
    <string name="position">Posisi</string>
    <string name="change">Ubah</string>
    <string name="customer_category">Customer Category</string>
    <string name="jenis_kelamin">Jenis Kelamin:</string>
    <string name="usia">Usia :</string>
    <string name="mengetahui_pilihan_produk">Mengetahui Pilihan Produk :</string>
    <string name="dewasa_muda"><![CDATA[21–35 Tahun]]></string>
    <string name="dewasa"><![CDATA[>35 Tahun]]></string>
    <string name="remaja"><![CDATA[<20 Tahun]]></string>
    <string name="rekomendasi_produk">Rekomendasi Produk:</string>
    <string name="ketik_nama_produk">Ketik Nama Produk :</string>
    <string name="status_vaksin_pertama">Status Vaksin Pertama</string>
    <string name="status_vaksin_kedua">Status Vaksin Kedua</string>
    <string name="update_data_vaksin"><![CDATA[Update Data Vaksin >]]></string>
    <string name="sudah_vaksin">Sudah Vaksin</string>
    <string name="belum_vaksin">Belum Vaksin</string>
    <string name="alasan_belum_vaksin_pertama">Alasan Belum Vaksin Pertama</string>
    <string name="alasan_belum_vaksin_kedua">Alasan Belum Vaksin Kedua</string>
    <string name="update_with_arrow"><![CDATA[Update >]]></string>
    <string name="kuis">Kuis</string>
    <string name="survey">Survey</string>
    <string name="title_activity_quiz_new">QuizNewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_survey_new">SurveyNewActivity</string>
    <string name="title_activity_frequent">FrequentActivity</string>

</resources>
