<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.LoginActivity">


    <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/dp25"
                android:text="@string/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp30"
                android:layout_marginRight="@dimen/dp30"
                android:textColor="@color/gray"
                android:textSize="@dimen/dp16"
                android:text="@string/forgotpassworddesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RelativeLayout
                android:layout_marginTop="@dimen/dp30"
                android:layout_marginLeft="@dimen/dp30"
                android:layout_marginRight="@dimen/dp30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <EditText
                    android:background="@color/transparat"
                    android:layout_toRightOf="@id/imguser"
                    android:layout_toEndOf="@id/imguser"
                    android:hint="@string/email"
                    android:id="@+id/etemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:layout_marginTop="@dimen/dp5"
                    android:layout_below="@+id/etemail"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/reds"/>
        </RelativeLayout>






        <RelativeLayout
                android:id="@+id/bsubmit"
                android:layout_marginTop="@dimen/dp200"
                android:layout_marginRight="@dimen/dp30"
                android:layout_marginLeft="30dp"
                android:background="@drawable/round_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_margin="@dimen/dp5"
                    android:layout_centerHorizontal="true"
                    android:text="@string/submit"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



        </RelativeLayout>


    </LinearLayout>



</RelativeLayout>