<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.LoginActivity">


    <ScrollView android:fitsSystemWindows="true" android:layout_centerInParent="true" android:layout_width="match_parent" android:layout_height="wrap_content">


        <LinearLayout

                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp30"
                    android:text="@string/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginLeft="@dimen/dp30"
                    android:layout_marginRight="@dimen/dp30"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/dp16"
                    android:text="@string/logindes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <RelativeLayout
                    android:layout_marginTop="@dimen/dp50"
                    android:layout_marginLeft="@dimen/dp30"
                    android:layout_marginRight="@dimen/dp30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_alignTop="@id/etuser"
                        android:layout_alignBottom="@id/etuser"
                        android:id="@+id/imguser"
                        android:src="@drawable/icon_hondaid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:layout_marginLeft="@dimen/dp10"
                        android:background="@color/transparat"
                        android:layout_toRightOf="@id/imguser"
                        android:layout_toEndOf="@id/imguser"
                        android:hint="@string/loginhint"
                        android:id="@+id/etuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <LinearLayout
                        android:layout_marginTop="@dimen/dp5"
                        android:layout_below="@+id/etuser"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/reds"/>
            </RelativeLayout>


            <RelativeLayout
                    android:layout_marginTop="@dimen/dp50"
                    android:layout_marginLeft="@dimen/dp30"
                    android:layout_marginRight="@dimen/dp30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_alignTop="@id/etpassword"
                        android:layout_alignBottom="@id/etpassword"
                        android:id="@+id/imgpassword"
                        android:src="@drawable/icon_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:layout_marginLeft="@dimen/dp10"
                        android:background="@color/transparat"
                        android:layout_toRightOf="@id/imgpassword"
                        android:layout_toEndOf="@id/imgpassword"
                        android:hint="@string/passwordhint"
                        android:id="@+id/etpassword"
                        android:layout_width="match_parent"
                        android:layout_toLeftOf="@id/imgeye"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:layout_alignParentRight="true"
                        android:layout_alignTop="@id/etpassword"
                        android:layout_alignBottom="@id/etpassword"
                        android:id="@+id/imgeye"
                        android:src="@drawable/icon_visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:layout_marginTop="@dimen/dp5"
                        android:layout_below="@+id/etpassword"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/reds"/>
            </RelativeLayout>



            <RelativeLayout
                    android:id="@+id/bsubmit"
                    android:layout_marginTop="@dimen/dp70"
                    android:layout_marginRight="@dimen/dp30"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/round_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_margin="@dimen/dp5"
                        android:layout_centerHorizontal="true"
                        android:text="@string/masuk"
                        android:textSize="18dp"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>



            </RelativeLayout>

            <LinearLayout
                    android:layout_marginTop="@dimen/dp20"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:textColor="@color/gray"
                        android:text="@string/donthaveaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tregister"
                        android:textStyle="bold"
                        android:textColor="@color/reds"
                        android:text="@string/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:textColor="@color/gray"
                        android:text=" | "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/tforgot"
                        android:textColor="@color/reds"
                        android:text="@string/forgotpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>



</RelativeLayout>