<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.LoginActivity">


    <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/imgresult"
                android:src="@drawable/img_registrasisukses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        <TextView
                android:id="@+id/ttitle"
                android:textColor="@color/black"
                android:textSize="@dimen/dp25"
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RelativeLayout

                android:background="@drawable/square_menu"
                android:layout_marginLeft="@dimen/dp30"
                android:layout_marginRight="@dimen/dp30"
                android:paddingLeft="@dimen/dp50"
                android:paddingRight="@dimen/dp50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:id="@+id/tdesc"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/dp12"
                    android:text="@string/registerdesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>






        <RelativeLayout
                android:id="@+id/bback"
                android:layout_marginTop="@dimen/dp40"
                android:layout_marginRight="@dimen/dp30"
                android:layout_marginLeft="30dp"
                android:background="@drawable/round_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_margin="@dimen/dp5"
                    android:layout_centerHorizontal="true"
                    android:text="@string/backtologin"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



        </RelativeLayout>


    </LinearLayout>



</RelativeLayout>